--- a/login.html
+++ b/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body class="login">
     <h1>FÆTTER BR'S JUL 2020</h1>
-    <img class="julelogo" src="julelogo.png" alt="logo">
+    <img class="julelogo" src="img/julelogo1.png" alt="logo">
     
 
     <form action="profile.html">
@@ -24,8 +24,7 @@
 
         <input class="button" type="submit" value="Glemt">
 
-        <input class="button" type="submit" value="Login">
-
     </form>
 </body>
+<footer><input class="bigbutton" type="submit" value="Login"></footer>
 </html>
