--- a/home.html
+++ b/home.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="stylesheet.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>Document</title>
 </head>
 <body>
     
+    <h1 class="overskrift">GLÆDELIG 6. DECEMBER</h1>
+    
+    <section class="tree"> </section>
+
+<section class="gaver">
+    <img src="img/gave1.png" alt="1advent">
+    <img src="img/gave 2.png" alt="2advent">
+    <h1 class="animate__animated animate__bounce"><img  src="img/gave3.png" alt="3advent" ></h1>
+    <img src="img/gave4.png" alt="4advent">
+</section>
+
+
+<footer class="menu">
+    <img class="icon" src="img/tree.png" alt="icon"> 
+    <img class="icon" src="img/list.png" alt="icon">
+    <img class="icon" src="img/gave.png" alt="icon">
+</footer>
 </body>
+
+
 </html>
