--- a/præmie.html
+++ b/præmie.html
@@ -20,8 +20,9 @@
 
 
     <section class="præmie_boks">
-      <p>TILLYKKE DU HAR VUNDET:</p>
-      <p>3.ADVENT</p>
+      <p class="præmie_text" >TILLYKKE DU HAR VUNDET:</p>
+      <img class="præmie" src="img/præmie.png" alt="præmie_uno">
+      <p class="præmie_text">3.ADVENT</p>
     </section>
 
     
