--- a/præmie.html
+++ b/præmie.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="overskrift">GLÆDELIG 13. DECEMBER</h1>
     
-    <section class="tree"> </section>
+    <section class="tree"></section>
 
 <section class="gaver">
     <img src="img/gave1.png" alt="1advent">
@@ -23,6 +23,10 @@
       <p class="præmie_text" >TILLYKKE DU HAR VUNDET:</p>
       <img class="præmie" src="img/præmie.png" alt="præmie_uno">
       <p class="præmie_text">3.ADVENT</p>
+    </section>
+
+    <section class="indløs"> 
+    <h2>INDLØS</h2>
     </section>
 
     
