--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <h1 class="overskrift">GLÆDELIG 13. DECEMBER</h1>
+    <h1 class="overskrift">GLÆDELIG . DECEMBER</h1>
     
     <section class="tree"> </section>
 
