præmie (mangler det sidste)

--- a/præmie.html
+++ b/præmie.html
@@ -29,6 +29,11 @@
     <h2>INDLØS</h2>
     </section>
 
+    <section class="gem">
+        <img src="img/kryds.jpg" alt="kryds">
+        <h2>GEM</h2>
+    </section>
+
     
 </body>
 </html>
