--- a/præmie.html
+++ b/præmie.html
@@ -6,9 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
-<body>
-    <h1 class="overskrift">GLÆDELIG 13. DECEMBER</h1>
-    
+<body>  
     <section class="tree"></section>
 
 <section class="gaver">
@@ -30,7 +28,7 @@
     </section>
 
     <section class="gem">
-        <img src="img/kryds.jpg" alt="kryds">
+        <img class="kryds" src="img/kryds.jpg" alt="kryds">
         <h2>GEM</h2>
     </section>
 
