--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   />
     <title>Document</title>
 </head>
-<body>
+<body class="home" >
     
     <h1 class="overskrift">GLÆDELIG . DECEMBER</h1>
     
