--- a/qrjagt.html
+++ b/qrjagt.html
@@ -14,11 +14,12 @@
     <img class="qrkode" src="img/qr.png" alt="qr">
 
 <section>
-    <p>START SØGNINGEN PÅ DEN PERFEKTE ØNSKELISTE</p>
+    <p class="søgning" >START SØGNINGEN PÅ DEN PERFEKTE ØNSKELISTE</p>
 </section>
 
 <section>
-    <p>Til min ønskeliste</p>
+    <img class="pil" src="img/pil.png" alt="pil">
+    <p class="pil_tekst" >Til min ønskeliste</p>
 </section>
 
 <footer class="menu">
