--- a/kamera.html
+++ b/kamera.html
@@ -18,9 +18,9 @@
     <h4>VIDEO</h4>
     <h4 id="foto">FOTO</h4>
     <h4>PORTRÆT</h4>
-</section>
-
-<section><img class="minibillede" src="img/foto.png" alt="foto">
+    <section><img class="minibillede" src="img/foto.png" alt="foto">
+    </section>
+    <section><img class="knap" src="img/button.jpg" alt="knap"></section>
 </section>
     
 </body>
