--- a/kamera.html
+++ b/kamera.html
@@ -14,13 +14,15 @@
 <img class="qrbillede1" src="img/qrkode.jpg" alt="qrkode">
 </section>
 
-<section class="kamera_funktioner"> 
+
+<footer class="kamera_funktioner"> 
     <h4>VIDEO</h4>
     <h4 id="foto">FOTO</h4>
     <h4>PORTRÆT</h4>
-</section>
+</footer>
 
-<section><img class="minibillede" src="img/foto.png" alt="foto">
+<section>
+    <img class="minibillede" src="img/foto.png" alt="foto">
 </section>
     
 </body>
