--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body class="login">
-    <h1>FÆTTER BR'S JUL 2020</h1>
+    <h1 class="hovedetekst1" >FÆTTER BR'S JUL 2020</h1>
     <img class="julelogo" src="img/julelogo1.png" alt="logo">
     
 
