--- a/home.html
+++ b/home.html
@@ -12,22 +12,22 @@
 </head>
 <body class="home" >
     
-    <h1 class="overskrift">GLÆDELIG . DECEMBER</h1>
+    <h1 class="overskrift">GLÆDELIG 13. DECEMBER</h1>
     
     <section class="tree"> </section>
 
 <section class="gaver">
     <img src="img/gave1.png" alt="1advent">
     <img src="img/gave 2.png" alt="2advent">
-    <h1 class="animate__animated animate__bounce"><img  src="img/gave3.png" alt="3advent" ></h1>
+   <a href="præmie.html"><h1 class="animate__animated animate__bounce"><img  src="img/gave3.png" alt="3advent" ></h1></a>
     <img src="img/gave4.png" alt="4advent">
 </section>
 
 
 <footer class="menu">
-    <img class="icon" src="img/tree.png" alt="icon"> 
-    <img class="icon" src="img/list.png" alt="icon">
-    <img class="icon" src="img/gave.png" alt="icon">
+    <a href="home.html"><img class="icon" src="img/tree.png" alt="icon"></a>
+    <a href="qrjagt.html"><img class="icon" src="img/list.png" alt="icon"></a>
+    <a href="julejagt.html"><img class="icon" src="img/gave.png" alt="icon"></a>
 </footer>
 </body>
 
