--- a/indløs.html
+++ b/indløs.html
@@ -12,7 +12,7 @@
     <img class="kode" src="img/qr.png" alt="qr kode">
 
 <footer>
-    <img src="img/kryds.jpg" alt="kryds">
+    <a href="home.html"><img src="img/kryds.jpg" alt="kryds"></a>
 </footer>
 
     
