--- a/kamera.html
+++ b/kamera.html
@@ -20,7 +20,9 @@
     <h4 id="foto">FOTO</h4>
     <h4>PORTRÆT</h4>
     <img class="minibillede" src="img/foto.png" alt="foto">
-    <section><img class="knap" src="img/button.jpg" alt="knap"></section>
+    <section>
+       <a href="ønskelisten.html"><img class="knap" src="img/button.jpg" alt="knap"></a>
+    </section>
 </footer>
     
 </body>
