--- a/klarparat.html
+++ b/klarparat.html
@@ -13,13 +13,11 @@
    <p>FIND PAKKERNE!!</p>
     </h1>
 
-    <img class="pakken" src="img/rødpakke.png" alt="pakke">
+    <a href="tillykke.html"><img class="pakken" src="img/rødpakke.png" alt="pakke"></a>
     
 
     <footer>
         <img class="kryds_klarparat" src="img/gennemsigt_kryds@3x.png" alt="kryds">
-    </footer>
-
-    
+    </footer>  
 </body>
 </html>
