--- a/login.html
+++ b/login.html
@@ -26,5 +26,8 @@
 
     </form>
 </body>
-<footer><input class="bigbutton" type="submit" value="Login"></footer>
+<footer>
+    <a href="intro.html"><input class="bigbutton" type="submit" value="Login">
+    </a>
+</footer>
 </html>
