--- a/præmie.html
+++ b/præmie.html
@@ -25,11 +25,11 @@
     </section>
 
     <section class="indløs"> 
-    <h2>INDLØS</h2>
+    <a class="link" href="indløs.html"><h2>INDLØS</h2></a>
     </section>
 
     <section class="gem">
-        <img class="kryds" src="img/kryds.jpg" alt="kryds">
+        <a href="home.html"><img class="kryds" src="img/kryds.jpg" alt="kryds"></a>
         <h2>GEM</h2>
     </section>
 </body>
