--- a/qrjagt.html
+++ b/qrjagt.html
@@ -14,18 +14,18 @@
     <img class="qrkode" src="img/qr.png" alt="qr">
 
 <section>
-    <p class="søgning" >START SØGNINGEN PÅ DEN PERFEKTE ØNSKELISTE</p>
+    <a href="kamera.html"><p class="søgning" >START SØGNINGEN PÅ DEN PERFEKTE ØNSKELISTE</p></a>
 </section>
 
 <section>
-    <img class="pil" src="img/pil.png" alt="pil">
-    <p class="pil_tekst" >Til min ønskeliste</p>
+    <a href="ønsker.html"><img class="pil" src="img/pil.png" alt="pil"></a>
+    <a href="ønsker.html"><p class="pil_tekst" >Til ønskelisten</p></a>
 </section>
 
 <footer class="menu">
-    <img class="icon" src="img/tree.png" alt="icon"> 
-    <img class="icon" src="img/list.png" alt="icon">
-    <img class="icon" src="img/gave.png" alt="icon">
+    <a href="home.html"><img class="icon" src="img/tree.png" alt="icon"></a>
+    <a href="qrjagt.html"><img class="icon" src="img/list.png" alt="icon"></a>
+    <a href="julejagt.html"><img class="icon" src="img/gave.png" alt="icon"></a>
 </footer>
 
     
