--- a/sæk.html
+++ b/sæk.html
@@ -10,7 +10,7 @@
     <h1 class="vokser">DIN ØNSKELISTE VOKSER!</h1>
     
     <footer> 
-        <img class="kryds_ønskeliste" src="img/kryds.jpg" alt="kryds">
+        <a href="ønskelisten.html"><img class="kryds_ønskeliste" src="img/kryds.jpg" alt="kryds"></a>
     </footer>
 </body>
 </html>
