--- a/tillykke.html
+++ b/tillykke.html
@@ -16,7 +16,7 @@
     </section>
     <section>
         <img class="pil_færdig" src="img/pil.png" alt="pil">
-        <h4 class="færdig">FÆRDIG</h4>
+       <a href="home.html"><h4 class="færdig">FÆRDIG</h4></a> 
     </section>
 </body>
 </html>
