--- a/ønskelisten.html
+++ b/ønskelisten.html
@@ -13,7 +13,7 @@
     <img class="drage" src="img/drage.jpg" alt="drage">
 
     <section class="tilføj">
-       <p> TILFØJ MIG TIL ØNSKELISTEN</p>
+       <a href="sæk.html"><p> TILFØJ MIG TIL ØNSKELISTEN</p></a>
     </section>
 
     <img class="julelogo_ønskelisten" src="img/julelogo1.png" alt="julelogo">
@@ -23,10 +23,10 @@
         <p class="fortsæt1">PERFEKTE ØNSKELISTE</p>
     </section>
 
-    <img class="lillepil" src="img/lillepil.jpg" alt="lille_pil">
+    <a href="kamera.html"><img class="lillepil" src="img/lillepil.jpg" alt="lille_pil"></a>
 
     <footer>
-        <img class="kryds" src="img/kryds.jpg" alt="kryds">
+        <a href="home.html"><img class="kryds" src="img/kryds.jpg" alt="kryds"></a>
     </footer>
     
 </body>
