--- a/julejagt.html
+++ b/julejagt.html
@@ -14,13 +14,13 @@
     <p class="info">Klik på alle de pakker du støder på din vej, og du er heldig hvis Fætter BR har en lille gave til dig!</p>
 
     <section class="start">
-        <h2 class="start_tekst">START</h2>
+        <a href="klarparat.html"><h2 class="start_tekst">START</h2></a>
     </section>
 
     <p class="info_nederst">PSSST... DU SKAL FINDE 15 PAKKER</p>
 
     <footer> 
-        <img class="kryds_julejagt" src="img/kryds.jpg" alt="kryds">
+       <a href="home.html"><img class="kryds_julejagt" src="img/kryds.jpg" alt="kryds"></a> 
     </footer>
 </body>
 </html>
