--- a/ønsker.html
+++ b/ønsker.html
@@ -23,9 +23,9 @@
     </section>
     
     <footer class="menu">
-        <img class="icon" src="img/tree.png" alt="icon"> 
-        <img class="icon" src="img/list.png" alt="icon">
-        <img class="icon" src="img/gave.png" alt="icon">
+    <a href="home.html"><img class="icon" src="img/tree.png" alt="icon"></a>
+    <a href="qrjagt.html"><img class="icon" src="img/list.png" alt="icon"></a>
+    <a href="julejagt.html"><img class="icon" src="img/gave.png" alt="icon"></a>
     </footer>
 </body>
 </html>
