--- a/klarparat.html
+++ b/klarparat.html
@@ -9,9 +9,10 @@
 <body class="klarparat_body">
 
     <h1 class="tekst_klarparat">
-   <p>KLAR, PARAT</p>
-   <p>FIND PAKKERNE!!</p>
     </h1>
+
+    <p class="klarparat1">KLAR, PARAT</p>
+    <p class="klarparat2">FIND PAKKERNE!!</p>
 
     <a href="tillykke.html"><img class="pakken" src="img/rødpakke.png" alt="pakke"></a>
     
