--- a/qrjagt.html
+++ b/qrjagt.html
@@ -18,7 +18,7 @@
 </section>
 
 <section>
-    <a href="ønsker.html"><img class="pil" src="img/pil.png" alt="pil"></a>
+    <a href="ønsker.html"><img class="pil" src="img/pilen.png" alt="pil"></a>
     <a href="ønsker.html"><p class="pil_tekst" >Til ønskelisten</p></a>
 </section>
 
